Removed fixed Nav
noticed that it was causing overlapping issues with the header.

--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,10 @@ body {
   width: 100%;
   background-color: #333;
   text-align: center;
-  top: 0;
+  /* Need to find a way to stop overlapping from occurring with header first
+  top: 0%;
   position: fixed;
+  */
 }
 
 .nav ul {  
